Bug:1898357 Address operatorhub image name overlap bug. Enable overflow-wrap on string.

--- a/frontend/packages/operator-lifecycle-manager/src/style.scss
+++ b/frontend/packages/operator-lifecycle-manager/src/style.scss
@@ -110,6 +110,8 @@ $co-affinity-row-margin: 15px;
 
 .co-operand-details__section--info dd {
   margin-bottom: 20px !important;
+  min-width: 0; // enable word-break
+  overflow-wrap: break-word;
 }
 
 .co-catalog-install-modal .modal-header .co-clusterserviceversion-logo__icon {
